--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.2",
@@ -20,7 +21,9 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.8"
